finally fixed the spacingg issue with the books, forgot there was padding around the buttons

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,9 +29,19 @@
 
 }
 
+body {
+  background: url('http://www.n8dunn.com/wp-content/uploads/2016/04/Open-book-empty-desk.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover !important;
+  -moz-background-size: cover !important;
+  -o-background-size: cover !important;
+  background-size: cover !important;
+ }
+
 .navbar-right {
-  margin-bottom: 20px;
+  margin: 25px !important;
+  padding: 25px;
 }
+
 
 #content {
   color: black;
@@ -45,9 +55,6 @@
   border: 2px solid black;
 }
 
-.navbar-right {
-  padding-bottom: 50px;
-}
 
 .book {
   height: 350px;
@@ -115,13 +122,14 @@ h1 {
   }
 }
 
-.profile, .all-books, .logout, .signup, .login {
+.profile, .all-books, .logout, .signup, .login, .back-button, .create-book {
   padding: 15px;
 }
 
 .dropdown-toggle {
   font-size: 20px;
 }
+
 .new-book-form {
   @include background-tile;
 
