--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,15 +3,6 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-body {
-  background: url('https://cdn.elegantthemes.com/blog/wp-content/uploads/2013/09/bg-10-full.jpg') no-repeat center center fixed;
-  -webkit-background-size: cover !important;
-  -moz-background-size: cover !important;
-  -o-background-size: cover !important;
-  background-size: cover !important;
-}
-
-
 
 .book-list, #content {
   color: rgb(255,255,255);
