--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,12 +1,3 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-
-body {
-  background: url('http://www.n8dunn.com/wp-content/uploads/2016/04/Open-book-empty-desk.jpg') no-repeat center center fixed;
-  -webkit-background-size: cover !important;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
- }
